# acade-watcher

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml  run_script.sh
scripts/: mark-transactions.py  new-transactions.py  watch-account.py
watcher/: Dockerfile  __init__.py  config.py  db.py  main.py  processed_transactions.py  transactions.py  watched_accounts.py
