[tool.poetry]
name = "transactions watcher"
version = "0.1.0"
description = ""
authors = ["Eduard Tykhoniuk <edik.tikhoniuk@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
requests = "^2.32.3"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
